eks/istio/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-customer-1
  namespace: spotlight-customer-1
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: app
        protocol: HTTP
      hosts:
        - spotlight-customer-1.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-customer-1
  namespace: spotlight-customer-1
spec:
  host: client-customer-1.spotlight-customer-1.svc.cluster.local
  subsets:
    - name: frontend-customer-1-subset
      labels:
        app: server-customer-1
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-customer-1-vs
  namespace: spotlight-customer-1
spec:
  hosts:
    - spotlight-customer-1.com
  gateways:
    - gateway-customer-1
  http:
    - name: frontend-customer-1
      route:
        - destination:
            host: client-customer-1.spotlight-customer-1.svc.cluster.local
            subset: frontend-customer-1-subset
          weight: 100
