eks/istio/istio-service-entry.yml
# See more at https://istio.io/docs/reference/config/networking/service-entry/
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cntre.in
spec:
  hosts:
  - cntre.in
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
